--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="io.github.jjwtan.notebook.MainActivity" >
+
+
+    <item
+        android:id="@+id/action_add_note"
+        android:orderInCategory="1"
+        android:title="@string/action_add_note"
+        app:showAsAction="ifRoom"/>
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
